# externalapps

./: .ebignore  .ebinclude  .gitignore  README.md  build_and_deploy.sh  create_eb_zip.py  docker-compose.yml  printenv_to_dotenv.sh  readme.txt  setenv_from_dotenv.sh
.elasticbeanstalk/: config.yml
.github/workflows/: deploy-to-eb.yml  push-to-gitlab.yml
cache/: readme.txt
extension/: readme.txt
extensions/: .dockerignore  Dockerfile  package.json  pnpm-lock.yaml  rollup.config.app.mjs  rollup.config.mjs
extensions/extensions/: copy-package.js  package-lock.json  package.json
extensions/migrations/: 20231203GD2-line-styling-structure.mjs  20231203GD3-circle-styling-structure.mjs  (+5 more)
manager/: Dockerfile  main.py  readme.txt
manager/python/: Dockerfile  main.py  pyproject.toml  utils.py
manager/python/geoprocessing/: Dockerfile  main.py  pyproject.toml  readme.txt  utils.py
manager/python/geoprocessing/lib/: create_table.py  dem_to_terrain_rgb.py  fill_table.py  get_header_info.py  get_input_data.py  raster_tiling.py  register_table.py
manager/python/geoprocessing/tasks/: __init__.py  convert.py  three_d_tiling.py  tiling.py  transform.py
manager/python/lib/: clear_directus_cache.py  create_table.py  dem_to_terrain_rgb.py  fetch_geoprocessing_default_values.py  fill_table.py  get_header_info.py  get_input_data.py  parse_filter.py  register_table.py  tile_raster_data.py
manager/python/tasks/: __init__.py  clip.py  convert.py  difference.py  dissolve.py  export.py  intersect.py  merge.py  raster_tiling.py  spatial_join.py  three_d_tiling.py  tiling.py  transform.py  union.py  vector_transform.py
server/: nginx.conf  readme.txt
web/: Dockerfile  README.md  app.config.ts  app.vue  docker-compose.yml  nuxt.config.ts  package.json  pnpm-lock.yaml  readme.txt  tailwind.config.ts  tsconfig.json
(+323 files in other folders)
