[tool.poetry]
name = "braga-task"
version = "0.1.0"
description = ""
authors = ["Miko <jherjati@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dramatiq-pg = "^0.11.0"
psycopg2-binary = "^2.9.8"
python-dotenv = "^1.0.0"
dramatiq = "^1.14.2"
minio = "^7.1.17"

[tool.poetry.group.dev.dependencies]
gdal = "^3.7.2"
watchdog = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
